# django-scaffold

./: .env.dev  .gitignore  Makefile  README.md  pyproject.toml
api/: tests.py  views.py
proj/: settings.py  urls.py
